--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="nav">
 		<a href="#about-section" id="nav-about">About</a>
 		<a href="#portfolio-section" id="nav-portfolio">Portfolio</a>
-		<img src="img/PS.png" id="logo1" title="Patrick Stepanian Logo" alt="Patrick Stepanian initials PS personal logo">
+		<img src="PS.png" id="logo1" title="Patrick Stepanian Logo" alt="Patrick Stepanian initials PS personal logo">
 		<a href="#experience-section" id="nav-experience">Experience</a>
 		<a href="#contact-section" id="nav-contact">Contact</a>
 	</div>
