--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							</div>
 						</div>
 						<div class="website-image">
-							<img src="../img/crypto_avant.png" title="A Cryptocurrency Blog Website" alt="A Cryptocurrency Blog Website">
+							<img src="crypto_avant.png" title="A Cryptocurrency Blog Website" alt="A Cryptocurrency Blog Website">
 						</div>
 					</div>
 					<div class="text">
@@ -95,7 +95,7 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="../img/grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
+							<img src="img/grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
 						</div>
 						<div class="website-info">
 							<div class="centered">
@@ -143,7 +143,7 @@
 					</div>
 					<div class="project">
 						<a href="https://appeni.com/" target="_blank">
-							<img src="../img/appeni.png" title="Appeni Inc." alt="appeni. is a tech company located in Los Angeles" style="width: 145px; height: 65px;">
+							<img src="appeni.png" title="Appeni Inc." alt="appeni. is a tech company located in Los Angeles" style="width: 145px; height: 65px;">
 						</a>
 						<p class="employer-name">
 							<a href="https://appeni.com/" target="_blank">
@@ -205,7 +205,7 @@
 					</div>
 					<div class="project">
 						<a href="https://www.codingdojo.com/" target="_blank">
-							<img src="../img/dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
+							<img src="dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
 						</a>
 						<p class="employer-name">
 							<a href="https://www.codingdojo.com/" target="_blank">
