--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="img/grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
+							<img src="grade_calc.png" title="GradeCalculator" alt="Calculate a desired test score to score a certain ammount on a test or final">
 						</div>
 						<div class="website-info">
 							<div class="centered">
 								<div>
-									<a class="website-link" href="https://citecitecite.com/" target="_blank">
+									<a class="website-link" href="https:///" target="_blank">
 										<i class="icon icon-export"></i>
 										Visit Website
 									</a>
