--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="../script.js"></script>
 
 </head>
 
@@ -18,7 +18,7 @@
 	<div id="nav">
 		<a href="#about-section" id="nav-about">About</a>
 		<a href="#portfolio-section" id="nav-portfolio">Portfolio</a>
-		<img src="PS.png" id="logo1" title="Patrick Stepanian Logo" alt="Patrick Stepanian initials PS personal logo">
+		<img src="../img/PS.png" id="logo1" title="Patrick Stepanian Logo" alt="Patrick Stepanian initials PS personal logo">
 		<a href="#experience-section" id="nav-experience">Experience</a>
 		<a href="#contact-section" id="nav-contact">Contact</a>
 	</div>
@@ -40,9 +40,9 @@
 				</p>
 			</div>
 			<div class="section-content">
-<!-- 				<div class="project" id="profile-photo" style="width: 210px;">
+				<div class="project" id="profile-photo" style="width: 210px;">
 					<img src="img/.jpg" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian" style="height: 210px; width: 210px; transform: rotate(90deg);">
-				</div> -->
+				</div>
 				<div class="project" id="nav-about">
 					<!-- <img src="img/me.jpg" id="profile-photo-mobile" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian"> -->
 					<p class="text">
@@ -85,7 +85,11 @@
 							</div>
 						</div>
 						<div class="website-image">
-							<img src="crypto_avant.png" title="A Cryptocurrency Blog Website" alt="A Cryptocurrency Blog Website">
+							<img src="../img/crypto_avant.png" title="A Cryptocurrency Blog Website" alt="A Cryptocurrency Blog Website">
+							<a class="website-link" href="https://github.com/stepanianpat/CryptoAvant" target="_blank" style="margin-left: 50px; font-size: 16px; position: relative; top:-20px;">
+								<i class="fa fa-github"></i>
+										View on Github
+							</a>
 						</div>
 					</div>
 					<div class="text">
@@ -95,18 +99,16 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="grade_calc.png" title="GradeCalculator" alt="Calculate a desired test score to score a certain ammount on a test or final">
+							<img src="../img/grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
+							<a class="website-link" href="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank" style="margin-left: 25px; position: relative; top: 20px; font-size: 16px;">
+								<i class="fa fa-github"></i>
+										View on Github
+							</a>
 						</div>
 						<div class="website-info">
 							<div class="centered">
 								<div>
-									<a class="website-link" href="https:///" target="_blank">
-										<i class="icon icon-export"></i>
-										Visit Website
-									</a>
-								</div>
-								<div>
-									<a class="website-link" href="https://github.com/Windso/citecitecite.com" target="_blank">
+									<a class="website-link" href="https://github.com/stepanianpat/CryptoAvant" target="_blank">
 										<i class="icon icon-github"></i>
 										View on Github
 									</a>
@@ -143,7 +145,7 @@
 					</div>
 					<div class="project">
 						<a href="https://appeni.com/" target="_blank">
-							<img src="appeni.png" title="Appeni Inc." alt="appeni. is a tech company located in Los Angeles" style="width: 145px; height: 65px;">
+							<img src="../img/appeni.png" title="Appeni Inc." alt="appeni. is a tech company located in Los Angeles" style="width: 145px; height: 65px;">
 						</a>
 						<p class="employer-name">
 							<a href="https://appeni.com/" target="_blank">
@@ -205,7 +207,7 @@
 					</div>
 					<div class="project">
 						<a href="https://www.codingdojo.com/" target="_blank">
-							<img src="dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
+							<img src="../img/dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
 						</a>
 						<p class="employer-name">
 							<a href="https://www.codingdojo.com/" target="_blank">
@@ -316,7 +318,7 @@
 				<a href="https://www.linkedin.com/in/patrick-stepanian-57676b121/" target="_blank">
 					<i class="fa fa-linkedin"></i>
 				</a>
-				
+
 				<a href="https://www.instagram.com/patrick_certifiedauto/" target="_blank">
 					<i class="fa fa-instagram"></i>
 				</a>
