--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="nav">
 		<a href="#about-section" id="nav-about">About</a>
 		<a href="#portfolio-section" id="nav-portfolio">Portfolio</a>
-		<img src="img/PS.png" id="logo1" title="Patrick Stepanian Logo" alt="Patrick Stepanian initials PS personal logo">
+		<img src="PS.png" id="logo1" title="Patrick Stepanian Logo" alt="Patrick Stepanian initials PS personal logo">
 		<a href="#experience-section" id="nav-experience">Experience</a>
 		<a href="#contact-section" id="nav-contact">Contact</a>
 	</div>
@@ -99,7 +99,7 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="img/grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
+							<img src="grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
 							<a class="website-link" href="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank" style="margin-left: 25px; position: relative; top: 20px; font-size: 16px;">
 								<i class="fa fa-github"></i>
 										View on Github
@@ -145,7 +145,7 @@
 					</div>
 					<div class="project">
 						<a href="https://appeni.com/" target="_blank">
-							<img src="img/appeni.png" title="Appeni Inc." alt="appeni. is a tech company located in Los Angeles" style="width: 145px; height: 65px;">
+							<img src="appeni.png" title="Appeni Inc." alt="appeni. is a tech company located in Los Angeles" style="width: 145px; height: 65px;">
 						</a>
 						<p class="employer-name">
 							<a href="https://appeni.com/" target="_blank">
@@ -176,7 +176,7 @@
 					</div>
 					<div class="project">
 						<a href="https://www.pinger.com/" target="_blank">
-							<img src="img/pinger.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose">
+							<img src="pinger.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose">
 						</a>
 						<p class="employer-name">
 							<a href="https://www.pinger.com/" target="_blank">
@@ -207,7 +207,7 @@
 					</div>
 					<div class="project">
 						<a href="https://www.codingdojo.com/" target="_blank">
-							<img src="img/dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
+							<img src="dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
 						</a>
 						<p class="employer-name">
 							<a href="https://www.codingdojo.com/" target="_blank">
