--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="nav">
 		<a href="#about-section" id="nav-about">About</a>
 		<a href="#portfolio-section" id="nav-portfolio">Portfolio</a>
-		<img src="PS.png" id="logo1" title="Patrick Stepanian Logo" alt="Patrick Stepanian initials PS personal logo">
+		<img src="../img/PS.png" id="logo1" title="Patrick Stepanian Logo" alt="Patrick Stepanian initials PS personal logo">
 		<a href="#experience-section" id="nav-experience">Experience</a>
 		<a href="#contact-section" id="nav-contact">Contact</a>
 	</div>
@@ -85,7 +85,7 @@
 							</div>
 						</div>
 						<div class="website-image">
-							<img src="crypto_avant.png" title="A Cryptocurrency Blog Website" alt="A Cryptocurrency Blog Website">
+							<img src="../img/crypto_avant.png" title="A Cryptocurrency Blog Website" alt="A Cryptocurrency Blog Website">
 							<a class="website-link" href="https://github.com/stepanianpat/CryptoAvant" target="_blank" style="margin-left: 50px; font-size: 16px; position: relative; top:-20px;">
 								<i class="fa fa-github"></i>
 										View on Github
@@ -99,7 +99,7 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
+							<img src="../img/grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
 							<a class="website-link" href="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank" style="margin-left: 25px; position: relative; top: 20px; font-size: 16px;">
 								<i class="fa fa-github"></i>
 										View on Github
@@ -132,7 +132,7 @@
 				</p>
 			</div>
 			<div class="section-content">
-				<div class="work mobile-padding">
+				<!-- <div class="work mobile-padding">
 					<div class="work-dates">
 						<p>
 							May 2017 - Present
@@ -145,7 +145,7 @@
 					</div>
 					<div class="project">
 						<a href="https://appeni.com/" target="_blank">
-							<img src="appeni.png" title="Appeni Inc." alt="appeni. is a tech company located in Los Angeles" style="width: 145px; height: 65px;">
+							<img src="../img/appeni.png" title="" alt="" style="width: 145px; height: 65px;">
 						</a>
 						<p class="employer-name">
 							<a href="https://appeni.com/" target="_blank">
@@ -156,13 +156,13 @@
 							May 2017 - Present
 						</p>
 						<p class="job-title">
-							Software Engineer Intern
+
 						</p>
 						<p class="job-desc">
-							I am redesigning the build system and CI process for the web team, along with continuing to lead the web automation project. I'm using Jenkins, Shell Scripts, Bash and Node.js, among other languages and technologies.
+							
 						</p>
 					</div>
-				</div>
+				</div> -->
 				<!-- <div class="work mobile-padding">
 					<div class="work-dates">
 						<p>
@@ -176,7 +176,7 @@
 					</div>
 					<div class="project">
 						<a href="https://www.pinger.com/" target="_blank">
-							<img src="pinger.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose">
+							<img src="img/pinger.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose">
 						</a>
 						<p class="employer-name">
 							<a href="https://www.pinger.com/" target="_blank">
@@ -207,7 +207,7 @@
 					</div>
 					<div class="project">
 						<a href="https://www.codingdojo.com/" target="_blank">
-							<img src="dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
+							<img src="../img/dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
 						</a>
 						<p class="employer-name">
 							<a href="https://www.codingdojo.com/" target="_blank">
