--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 					</div>
 					<div class="project">
 						<a href="https://www.codingdojo.com/" target="_blank">
-							<img src="../img/dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
+							<img src="dojo.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose" style="width: 65px; height: 65px;">
 						</a>
 						<p class="employer-name">
 							<a href="https://www.codingdojo.com/" target="_blank">
