--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 	<title>Patrick Stepanian</title>
 
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="../script.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
 </head>
 
