--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="section-content">
 				<div class="project" id="profile-photo" style="width: 210px;">
-					<img src="img/.jpg" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian" style="height: 210px; width: 210px; transform: rotate(90deg);">
+<!-- 					<img src="img/.jpg" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian" style="height: 210px; width: 210px; transform: rotate(90deg);"> -->
 				</div>
 				<div class="project" id="nav-about">
 					<!-- <img src="img/me.jpg" id="profile-photo-mobile" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian"> -->
