--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="img/grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
+							<img src="grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
 							<a class="website-link" href="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank" style="margin-left: 25px; position: relative; top: 20px; font-size: 16px;">
 								<i class="fa fa-github"></i>
 										View on Github
