--- a/index.html
+++ b/index.html
@@ -243,20 +243,20 @@
 				<form id="contact" class="contact" action="">
 
 					<label for="name" id="name_label">Name *</label>
-					<label class="error" for="name" id="name_error">this field is required</label>
+					<label class="error" for="name" id="name_error"></label>
 					<br /> <input type="text" name="name" id="name" value="" class="text-input input" placeholder="Name" />
 
 
 					<br />
 					<label for="email" id="email_label">E-Mail *</label>
-					<label class="error" for="email" id="email_error">this field is required</label>
+					<label class="error" for="email" id="email_error"></label>
 					<label class="error" for="email" id="email_invalid_error">please insert a valid email</label>
 					<br /> <input type="email" name="email" id="email" value="" class="text-input input" placeholder="E-Mail" />
 
 
 					<br />
 					<label for="message">Message *</label>
-					<label class="error" for="message" id="message_error">this field is required</label>
+					<label class="error" for="message" id="message_error"></label>
 					<br /> <textarea name="message" id="message" rows="8" class="text-input input" placeholder="Message"></textarea>
 
 
