--- a/index.html
+++ b/index.html
@@ -242,20 +242,20 @@
 			<div class="section-content" id="contact">
 				<form id="contact" class="contact" action="">
 
-					<label for="name" id="name_label">Name *</label>
+					<label for="name" id="name_label">Name </label>
 					<label class="error" for="name" id="name_error"></label>
 					<br /> <input type="text" name="name" id="name" value="" class="text-input input" placeholder="Name" />
 
 
 					<br />
-					<label for="email" id="email_label">E-Mail *</label>
+					<label for="email" id="email_label">E-Mail </label>
 					<label class="error" for="email" id="email_error"></label>
-					<label class="error" for="email" id="email_invalid_error">please insert a valid email</label>
+					<label class="error" for="email" id="email_invalid_error"></label>
 					<br /> <input type="email" name="email" id="email" value="" class="text-input input" placeholder="E-Mail" />
 
 
 					<br />
-					<label for="message">Message *</label>
+					<label for="message">Message </label>
 					<label class="error" for="message" id="message_error"></label>
 					<br /> <textarea name="message" id="message" rows="8" class="text-input input" placeholder="Message"></textarea>
 
