--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 			</div>
 
 			<div class="section-content" id="contact">
-				<form id="contact" class="contact" action="">
+<!-- 				<form id="contact" class="contact" action="">
 
 					<label for="name" id="name_label">Name </label>
 					<label class="error" for="name" id="name_error"></label>
@@ -263,7 +263,8 @@
 					<br />
 					<input name="submit" id="submit" value="Send me Mail!" type="submit" class="subbutton">
 
-				</form>
+				</form> -->
+						<h2>Contact form coming soon</h2>
 
 				  <div  id="success_message" style="display:none">
 				      <h3>Submitted the form successfully!</h3>
