--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Patrick Stepanian</title>
-
+	<link rel="shortcut icon" href="img/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -51,7 +51,7 @@
 					<p class="text">
 						In my free time I continue developing my projects and expanding on my programming knowledge<!-- <a id="nav-portfolio-2">websites I built</a> -->. All my life I've found enjoyment in creating things and letting my creative side take action. I love to learn and I strongly believe that technology has the capability to enrich every life on earth and ultimately create a better, more efficient world. 
 					<p class="text">
-						I’m always open to new knwoledge and new ideas. If you think you have something I might be interested in or you just want to say hi,   <a href="#contact-section" id="nav-contact-2"> get in touch</a>.
+						I’m always open to new knowledge and new ideas. If you think you have something I might be interested in or you just want to say hi,   <a href="#contact-section" id="nav-contact-2"> get in touch</a>.
 					</p>
 				</div>
 			</div>
