--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
 	
 		<div class="section" id="contact-section">
 			<div class="section-title">
-				<p>
+<!-- 				<p>
 					Contact me!
-				</p>
+				</p> -->
 			</div>
 
 			<div class="section-content" id="contact">
@@ -264,7 +264,7 @@
 					<input name="submit" id="submit" value="Send me Mail!" type="submit" class="subbutton">
 
 				</form> -->
-						<h2>Contact form coming soon</h2>
+						<h3>CONTACT FORM COMING SOON</h3>
 
 				  <div  id="success_message" style="display:none">
 				      <h3>Submitted the form successfully!</h3>
