--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 			</div>
 			<div class="section-content">
 				<div class="project" id="profile-photo" style="width: 210px;">
- 					<img src="ck.jpg" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian" style="height: 210px; width: 210px; transform: rotate(90deg);">
+ 					<img src="ck.JPG" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian" style="height: 210px; width: 210px; transform: rotate(90deg);">
 				</div>
 				<div class="project" id="nav-about">
-					 <img src="ck.jpg" id="profile-photo-mobile" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian"> 
+					 <img src="ck.JPG" id="profile-photo-mobile" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian"> 
 					<p class="text">
 						I am a web developer and designer with back-end experience, an entrepreneur, and a student studying business.
 					</p>
