--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</p>
 			</div>
 			<div class="section-content">
-				<div class="project" id="profile-photo" style="width: 210px;">
+				<div class="project" id="profile-photo" style="width: 210px; transform: rotate(270deg);">
  					<img src="ck.JPG" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian" style="height: 210px; width: 210px; transform: rotate(90deg);">
 				</div>
 				<div class="project" id="nav-about">
