--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
 						</div>
 					</div>
 					<div class="project">
-						<a href="https://appeni.com/" target="_blank">
-							<img src="appeni.png" title="" alt="" style="width: 145px; height: 65px;">
+						<a href="https://.com/" target="_blank">
+							<img src=".png" title="" alt="" style="width: 145px; height: 65px;">
 						</a>
 						<p class="employer-name">
-							<a href="https://appeni.com/" target="_blank">
+							<a href="https://.com/" target="_blank">
 								NA
 							</a>
 						</p>
@@ -185,11 +185,11 @@
 						</div>
 					</div>
 					<div class="project">
-						<a href="https://www.pinger.com/" target="_blank">
-							<img src="img/pinger.png" title="Pinger Inc." alt="Pinger Inc. is a tech company located in San Jose">
+						<a href="https://www..com/" target="_blank">
+							<img src="img/.png" title=" Inc." alt="">
 						</a>
 						<p class="employer-name">
-							<a href="https://www.pinger.com/" target="_blank">
+							<a href="https://www..com/" target="_blank">
 								Pinger
 							</a>
 						</p>
@@ -200,7 +200,6 @@
 							Software Engineer Intern
 						</p>
 						<p class="job-desc">
-							I was leading the web automation project along with helping to improve the CI process for the web team. I was working with a variety of languages and tools, especially Selenium, WebdriverIO, cucumber-js, Gherkin, Jenkins and Shell Scripts.
 						</p>
 					</div>
 				</div> -->
@@ -302,7 +301,7 @@
 							(818) 422-7751
 						</a>
 						<br>
-						<a class="contact-link" href="https://www.google.com/maps/place/Cupertino,+CA/" target="_blank">
+						<a class="contact-link" href="https://goo.gl/maps/dyFt2epPYUH2" target="_blank">
 						<i class="fa fa-map-marker"></i>
 
 							Los Angeles, CA
@@ -333,14 +332,11 @@
 				<a href="https://www.instagram.com/patrick_certifiedauto/" target="_blank">
 					<i class="fa fa-instagram"></i>
 				</a>
-				<!-- <a href="http://kristianwindsor.tumblr.com/" target="_blank">
-					<i class="fa fa-tumblr"></i>
-				</a> -->
 			</div>
 		</div>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script/jquery.js"></script>
 	<script type="text/javascript" src="script/script.js"></script>
 
