--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
 	
 		<div class="section" id="contact-section">
 			<div class="section-title">
-<!-- 				<p>
+				<p>
 					Contact me!
-				</p> -->
+				</p>
 			</div>
 
 			<div class="section-content" id="contact">
-<!-- 				<form id="contact" class="contact" action="">
+ 				<form id="contact" class="contact" action="action="https://formspree.io/stepanian86@gmail.com" method="POST"">
 
 					<label for="name" id="name_label">Name </label>
 					<label class="error" for="name" id="name_error"></label>
@@ -269,13 +269,12 @@
 					<br />
 					<input name="submit" id="submit" value="Send me Mail!" type="submit" class="subbutton">
 
-				</form> -->
-						<h3>CONTACT FORM COMING SOON</h3>
+				</form>
 
 				  <div  id="success_message" style="display:none">
 				      <h3>Submitted the form successfully!</h3>
 				      <p>
-				      We will get back to you soon.
+				      I will get back to you soon.
 				      </p>
 				  </div>
 				  <div id="error_message"
