--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 			</div>
 
 			<div class="section-content" id="contact">
- 				<form id="contact" class="contact" action="action="https://formspree.io/stepanian86@gmail.com" method="POST"">
+ 				<form id="contact" class="contact" action="https://formspree.io/stepanian86@gmail.com" method="POST">
 
 					<label for="name" id="name_label">Name </label>
 					<label class="error" for="name" id="name_error"></label>
