--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							</div>
 						</div>
 						<div class="website-image">
-							<img src="crypto_avant.png" title="A Cryptocurrency Blog Website" alt="A Cryptocurrency Blog Website">
+							<img src="window-proj.png" title="Window & Door Business Site" alt="Window & Door Business Site">
 							<a class="website-link" href="https://github.com/stepanianpat/CryptoAvant" target="_blank" style="margin-left: 50px; font-size: 16px; position: relative; top:-20px;">
 								<i class="fa fa-github"></i>
 										View on Github
@@ -100,7 +100,7 @@
 						</div>
 					</div>
 					<div class="text">
-						<p class="title">A Cryptocurrency Blog</p>
+						<p class="title">Window & Door Business Site</p>
 					</div>
 				</div>
 				<div class="project">
