--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 						<div class="website-info">
 							<div class="centered">
 								<div class="website-link-container">
-<!-- 									
+									
 								</div>
 								<div class="website-link-container">
-<!-- 									<a class="website-link" href="https://github.com/Windso/apasswordgenerator.website" target="_blank">
+									<a class="website-link" href="https://github.com/Windso/apasswordgenerator.website" target="_blank">
 										<i class="icon icon-github"></i>
 										View on Github
-									</a> -->
+									</a>
 								</div>
 							</div>
 						</div>
