--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								</div>
 								<div class="website-link-container">
 									<a class="website-link" href="https://github.com/Windso/apasswordgenerator.website" target="_blank">
-										<i class="icon icon-github"></i>
+										<i class="fa fa-github"></i>
 										View on Github
 									</a>
 								</div>
@@ -108,7 +108,7 @@
 							<div class="centered">
 								<div>
 									<a class="website-link" href="https://github.com/stepanianpat/CryptoAvant" target="_blank">
-										<i class="icon icon-github"></i>
+										<i class="fa fa-github"></i>
 										View on Github
 									</a>
 								</div>
