--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									
 								</div>
 								<div class="website-link-container">
-									<a class="website-link" href="https://github.com/Windso/apasswordgenerator.website" target="_blank">
+									<a class="website-link" href="https://github.com/stepanianpat/Freelance-Window-Proj" target="_blank">
 										<i class="fa fa-github"></i>
 										View on Github
 									</a>
