--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="grade_calc.png" title="CiteCiteCite" alt="Generate citations for your bibliography in MLA, APA, or Chicago format">
+							<img src="grade_calc.png" title="GradeCal" alt="Generate final grade calculation based on desired grade and final exam weight">
 						</div>
 						<div class="website-info">
 							<div class="centered">
 								<div>
-									<a class="website-link" href="https://github.com/stepanianpat/CryptoAvant" target="_blank">
+									<a class="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank">
 										<i class="fa fa-github"></i>
 										View on Github
 									</a>
