--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
 						<p class="title">Window & Door Business Site</p>
 					</div>
 				</div>
-				<div class="project">
+				<div class="project mobile-padding">
 					<div class="image-container hoverable">
 						<div class="website-image">
 							<img src="grade_calc.png" title="GradeCal" alt="Generate final grade calculation based on desired grade and final exam weight">
 						</div>
 						<div class="website-info">
 							<div class="centered">
-								<div>
+								<div class="website-image">
 									<a class="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank">
 										<i class="fa fa-github"></i>
 										View on Github
