--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						</div>
 						<div class="website-info">
 							<div class="centered">
-								<div class="website-image">
+								<div class="website-link-container">
 									<a class="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank">
 										<i class="fa fa-github"></i>
 										View on Github
