--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<p class="title">Window & Door Business Site</p>
 					</div>
 				</div>
-				<div class="project mobile-padding">
+				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
 							<img src="grade_calc.png" title="GradeCal" alt="Generate final grade calculation based on desired grade and final exam weight">
