--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						<div class="website-info">
 							<div class="centered">
 								<div class="website-link-container">
-									<a class="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank">
+									<a class="website-link" href="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank">
 										<i class="fa fa-github"></i>
 										View on Github
 									</a>
