--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="grade_calc.png" title="GradeCal" alt="Generate final grade calculation based on desired grade and final exam weight">
+							<img src="pong.png" title="PongGame" alt="Two Player Pong Game">
 						</div>
 						<div class="website-info">
 							<div class="centered">
 								<div class="website-link-container">
-									<a class="website-link" href="https://github.com/stepanianpat/Final-Grade-Calculator" target="_blank">
+									<a class="website-link" href="https://github.com/stepanianpat/Pong" target="_blank">
 										<i class="fa fa-github"></i>
 										View on Github
 									</a>
@@ -137,7 +137,7 @@
 						</div>
 					</div>
 					<div class="text">
-						<p class="title">Final Grade Calculator</p>
+						<p class="title">Pongr</p>
 					</div>
 				</div>
 
