--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						</div>
 					</div>
 					<div class="text">
-						<p class="title">Pongr</p>
+						<p class="title">2 Player Pong</p>
 					</div>
 				</div>
 
