--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<p class="title">Window & Door Business Site</p>
 					</div>
 				</div>
-				<div class="project">
+				<div class="project mobile-padding">
 					<div class="image-container hoverable">
 						<div class="website-image">
 							<img src="grade_calc.png" title="GradeCal" alt="Generate final grade calculation based on desired grade and final exam weight">
@@ -120,7 +120,7 @@
 					</div>
 				</div>
 				
-				<div class="project">
+				<div class="project mobile-padding">
 					<div class="image-container hoverable">
 						<div class="website-image">
 							<img src="pong.png" title="PongGame" alt="Two Player Pong Game">
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 				
-				<div class="project">
+				<div class="project mobile-padding">
 					<div class="image-container hoverable">
 						<div class="website-image">
 							<img src="burger.png" title="GradeCal" alt="Generate final grade calculation based on desired grade and final exam weight">
