--- a/index.html
+++ b/index.html
@@ -141,6 +141,27 @@
 					</div>
 				</div>
 				
+				<div class="project">
+					<div class="image-container hoverable">
+						<div class="website-image">
+							<img src="grade_calc.png" title="GradeCal" alt="Generate final grade calculation based on desired grade and final exam weight">
+						</div>
+						<div class="website-info">
+							<div class="centered">
+								<div class="website-link-container">
+									<a class="website-link" href="https://burger-builder-data.firebaseapp.com/" target="_blank">
+										<i class="fa fa-github"></i>
+										View on Github
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="text">
+						<p class="title">React Burger Builder</p>
+					</div>
+				</div>
+				
 
 			</div>
 		</div>
