--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="grade_calc.png" title="GradeCal" alt="Generate final grade calculation based on desired grade and final exam weight">
+							<img src="burger.png" title="GradeCal" alt="Generate final grade calculation based on desired grade and final exam weight">
 						</div>
 						<div class="website-info">
 							<div class="centered">
