--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="project" id="about">
 <!-- 					 <img src="ck.JPG" id="profile-photo-mobile" title="Patrick Stepanian Profile Pic" alt="Photo of me, Patrick Stepanian">  -->
 					<p class="text">
-						I am a web developer and designer with back-end experience, an entrepreneur, and a student studying business.
+						I am a programmer, an entrepreneur, and a student studying business.
 					</p>
 					<p class="text">
 						In my free time I continue developing my projects and expanding on my programming knowledge<!-- <a id="nav-portfolio-2">websites I built</a> -->. All my life I've found enjoyment in creating things and letting my creative side take action. I love to learn and I strongly believe that technology has the capability to enrich every life on earth and ultimately create a better, more efficient world. 
