--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
 							<div class="centered">
 								<div class="website-link-container">
 									<a class="website-link" href="https://burger-builder-data.firebaseapp.com/" target="_blank">
+										<i class="fa fa-window-maximize"></i>
+										View Site
+									</a>
+									<a class="website-link" href="https://github.com/stepanianpat/ReactJs-Burger-Builder" target="_blank">
 										<i class="fa fa-github"></i>
 										View on Github
 									</a>
