--- a/index.html
+++ b/index.html
@@ -178,71 +178,10 @@
 				</p>
 			</div>
 			<div class="section-content">
-				<!-- <div class="work mobile-padding">
-					<div class="work-dates">
-						<p>
-							May 2017 - Present
-						</p>
-					</div>
-					<div class="work-icon">
-						<div class="icon-container">
-							<i class="icon icon-location"></i>
-						</div>
-					</div>
-					<div class="project">
-						<a href="https://.com/" target="_blank">
-							<img src=".png" title="" alt="" style="width: 145px; height: 65px;">
-						</a>
-						<p class="employer-name">
-							<a href="https://.com/" target="_blank">
-								NA
-							</a>
-						</p>
-						<p class="work-dates2">
-							May 2017 - Present
-						</p>
-						<p class="job-title">
-
-						</p>
-						<p class="job-desc">
-							
-						</p>
-					</div>
-				</div> -->
-				<!-- <div class="work mobile-padding">
-					<div class="work-dates">
-						<p>
-							July 2017 - Dec. 2017
-						</p>
-					</div>
-					<div class="work-icon">
-						<div class="icon-container">
-							<i class="icon icon-location"></i>
-						</div>
-					</div>
-					<div class="project">
-						<a href="https://www..com/" target="_blank">
-							<img src="img/.png" title=" Inc." alt="">
-						</a>
-						<p class="employer-name">
-							<a href="https://www..com/" target="_blank">
-								Pinger
-							</a>
-						</p>
-						<p class="work-dates2">
-							July 2017 - Dec. 2017
-						</p>
-						<p class="job-title">
-							Software Engineer Intern
-						</p>
-						<p class="job-desc">
-						</p>
-					</div>
-				</div> -->
 				<div class="work mobile-padding">
 					<div class="work-dates">
 						<p>
-							July 2016 - Nov. 2016
+							Feb. 2017 - June, 2017
 						</p>
 					</div>
 					<div class="work-icon">
@@ -267,6 +206,37 @@
 						</p>
 						<p class="job-desc">
 							Dove head first into a fast-paced, innovative learning environment that allowed me to learn web-fundamentals, multiple coding languages, data structures, frameworks, and inudstry practices.  
+						</p>
+					</div>
+
+				<div class="work mobile-padding">
+					<div class="work-dates">
+						<p>
+							Jan. 2019 - Present
+						</p>
+					</div>
+					<div class="work-icon">
+						<div class="icon-container fade">
+							<i class="icon icon-location"></i>
+						</div>
+					</div>
+					<div class="project">
+						<a href="https://bluehubs.com/" target="_blank">
+							<img src="blue1.jpg" title="Pinger Inc." alt="  " style="width: 65px; height: 65px;">
+						</a>
+						<p class="employer-name">
+							<a href="https://bluehubs.com/" target="_blank">
+								BlueHubs
+							</a>
+						</p>
+						<p class="work-dates2">
+							Jan. 2019 - Present
+						</p>
+						<p class="job-title">
+							Front-End Developer Intern
+						</p>
+						<p class="job-desc">
+							Designing and developing digital marketing strategies for small and medium sized businesses that want to drive traffic and secure new leads while creating an online presence.
 						</p>
 					</div>
 				</div>
