--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
 	<div id="hi">
 		<p>Hi, I'm Patrick Stepanian.</p>
-		<p>I'm a programmer, welcome to my site.</p>
+		<p>I'm a Front-End Developer, welcome to my site!</p>
 	</div>
 
 <!-- 												About Section                                       -->  
