--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 							Jan. 2019 - Present
 						</p>
 						<p class="job-title">
-							Front-End Developer Intern
+							Front-End Developer
 						</p>
 						<p class="job-desc">
 							Designing and developing digital marketing strategies for small and medium sized businesses that want to drive traffic and secure new leads while creating an online presence.
