--- a/index.html
+++ b/index.html
@@ -339,7 +339,10 @@
 		</div>
 
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script
+	  src="https://code.jquery.com/jquery-3.4.1.slim.js"
+	  integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
+	  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="script/jquery.js"></script>
 	<script type="text/javascript" src="script/script.js"></script>
 
