--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
 
 
 	<script
-	  src="https://code.jquery.com/jquery-3.4.1.slim.js"
-	  integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI="
+	  src="https://code.jquery.com/jquery-3.4.1.min.js"
+	  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 	  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="script/jquery.js"></script>
 	<script type="text/javascript" src="script/script.js"></script>
