--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 	  src="https://code.jquery.com/jquery-3.4.1.min.js"
 	  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 	  crossorigin="anonymous"></script>
-	<script type="text/javascript" src="script/script.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
