--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="xoticpop.png" title="GradeCal" alt="Shopfy site Xotic Pop">
+							<img src="xoticpop.png" title="XoticPop" alt="Shopfy site Xotic Pop">
 						</div>
 						<div class="website-info">
 							<div class="centered">
@@ -190,7 +190,7 @@
 						</div>
 					</div>
 					<div class="text">
-						<p class="title">React Burger Builder</p>
+						<p class="title">Xotic Pop</p>
 					</div>
 				</div>
 				
