--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="project">
 					<div class="image-container hoverable">
 						<div class="website-image">
-							<img src="xotic-pop.png" title="XoticPop" alt="Shopfy site Xotic Pop">
+							<img src="xotic-mobile-web.png" title="XoticPop" alt="Shopfy site Xotic Pop">
 						</div>
 						<div class="website-info">
 							<div class="centered">
